--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 image:
-file: .gitpod.Docker-file
+ file: .gitpod.Dockerfile
 ports:
- -port: 3306
-  onOpen: ignore
+ - port: 3306
+   onOpen: ignore
